--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -54,6 +54,7 @@ body {
   grid-gap: 10px;
   grid-template-columns: repeat(2, [col] 1fr);
   grid-template-rows: repeat(5, [row] auto);
+  box-sizing: border-box;
 }
 
 .form-grid-top {
@@ -86,7 +87,7 @@ body {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  width: 95%;
+  width: 100%;
   height: 2.1em;
 }
 
@@ -95,7 +96,7 @@ body {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  width: 95%;
+  width: 100%;
 }
 
 .form-grid select {
