--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,3 +1,7 @@
+.wbw-wide-form {
+  width: 1170px;
+}
+
 input[type="number"]::-webkit-inner-spin-button, 
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -90,6 +94,7 @@ body {
   display: block;
   width: 100%;
   height: 2.1em;
+  box-sizing: border-box;
 }
 
 .form-grid textarea {
@@ -98,6 +103,7 @@ body {
   padding: 5px 10px;
   display: block;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .form-grid select {
@@ -107,6 +113,7 @@ body {
   display: block;
   width: 100%;
   height: 2.1em;
+  box-sizing: border-box;
 }
 
 .form-grid label {
@@ -115,6 +122,7 @@ body {
   padding: 10px 5px 5px 2px;
   letter-spacing: 1px;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .form-grid .inline label {
@@ -123,6 +131,7 @@ body {
   padding: 10px 5px 5px 2px;
   letter-spacing: 1px;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .form-grid .inline select {
@@ -132,6 +141,7 @@ body {
   display: inline;
   width: auto;
   height: 2.1em;
+  box-sizing: border-box;
 }
 
 .grid-flex-container {
