--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -56,6 +56,7 @@ body {
 .form-grid {
   display: grid;
   grid-gap: 10px;
+  width: 1170px;
   grid-template-columns: repeat(2, [col] 1fr);
   grid-template-rows: repeat(5, [row] auto);
   box-sizing: border-box;
