--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -57,6 +57,8 @@ body {
   display: grid;
   grid-gap: 10px;
   width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
   grid-template-columns: repeat(2, [col] 1fr);
   grid-template-rows: repeat(5, [row] auto);
   box-sizing: border-box;
