--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,5 +1,8 @@
 .wbw-wide-form {
   width: 1170px;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 input[type="number"]::-webkit-inner-spin-button, 
@@ -56,9 +59,9 @@ body {
 .form-grid {
   display: grid;
   grid-gap: 10px;
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
+  /* width: 1170px; */
+  /* margin-left: auto;
+  margin-right: auto; */
   grid-template-columns: repeat(2, [col] 1fr);
   grid-template-rows: repeat(5, [row] auto);
   box-sizing: border-box;
