--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,4 +1,4 @@
-.wbw-wide-form.wbw-wide-form.wbw-wide-form {
+body .wbw-wide-form.wbw-wide-form.wbw-wide-form {
   width: 1170px;
   max-width: 1170px;
   margin-left: auto;
