--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,5 +1,4 @@
-#form-replace {
-  width: 1170px !important;
+#form-replace#form-replace {
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
