--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,5 +1,5 @@
 div#form-replace.wbw_wide_form {
-  max-width: 1170px;
+  max-width: 1170px !important;
   margin-left: auto;
   margin-right: auto;
 }
