--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -1,3 +1,10 @@
+
+div#form_replace.wbw_wide_form {
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 input[type="number"]::-webkit-inner-spin-button, 
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
