--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -61,6 +61,7 @@ input[type="number"]::-webkit-outer-spin-button {
 .select2-custom.select2-custom.select2-custom textarea {
   margin-left: 10px;
   margin-bottom: 3px;
+  height: auto;
 }
 
 body {
