--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -30,7 +30,7 @@ input[type="number"]::-webkit-outer-spin-button {
   height: 2.1em;
 }
 
-.meeting-searcher-custom {
+.meeting-searcher-custom.meeting-searcher-custom {
   line-height: 1.5;
   font-size: 1.2em;
   padding: 5px 10px;
