--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -86,6 +86,7 @@ body {
   grid-template-rows: repeat(5, [row] auto);
   box-sizing: border-box;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 1.2em
 }
 
 .form-grid-top {
@@ -113,25 +114,8 @@ body {
   grid-row: row 5;
 }
 
-.form-grid input {
-  line-height: 1.5;
-  font-size: 1.2em;
-  padding: 5px 10px;
-  display: block;
-  width: 100%;
-  height: 2.1em;
-  box-sizing: border-box;
-}
-
-.form-grid textarea {
-  line-height: 1.5;
-  font-size: 1.2em;
-  padding: 5px 10px;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-}
-
+.form-grid input,
+.form-grid textarea,
 .form-grid select {
   line-height: 1.5;
   font-size: 1.2em;
@@ -140,7 +124,31 @@ body {
   width: 100%;
   height: 2.1em;
   box-sizing: border-box;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-style: solid;
+  border-width: 1px;
 }
+
+/* .form-grid textarea,
+.form-grid select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+} */
+/* 
+.form-grid select {
+  line-height: 1.5;
+  font-size: 1.2em;
+  padding: 5px 10px;
+  display: block;
+  width: 100%;
+  height: 2.1em;
+  box-sizing: border-box;
+} */
 
 .form-grid label {
   width: 100%;
@@ -168,6 +176,10 @@ body {
   width: auto;
   height: 2.1em;
   box-sizing: border-box;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-style: solid;
+  border-width: 1px;
 }
 
 .grid-flex-container {
