--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -116,10 +116,10 @@ body {
 .form-grid textarea,
 .form-grid select {
   line-height: 1.5;
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   display: block;
   width: 100%;
-  height: 2.1em;
+  /* height: 2.1em; */
   box-sizing: border-box;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -149,7 +149,6 @@ body {
 .form-grid .inline label {
   display: inline;
 }
-
 
 .grid-flex-container {
   display: flex;
