--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -113,13 +113,29 @@ body {
 }
 
 .form-grid input,
-.form-grid textarea,
-.form-grid select {
+.form-grid textarea
+{
   line-height: 1.5;
   /* padding: 5px 10px; */
   display: block;
   width: 100%;
   /* height: 2.1em; */
+  box-sizing: border-box;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-top-style: solid;
+  border-width: 1px;
+  font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 1.2em
+}
+
+.form-grid select {
+  line-height: 1.5;
+  /* padding: 5px 10px; */
+  display: block;
+  width: 100%;
+  height: 2.1em;
+  background:lightgray;
   box-sizing: border-box;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
