--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -136,8 +136,7 @@ body {
   width: 100%;
   height: 2.1em;
   box-sizing: border-box;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
+  border-radius: 8px;
   border-top-style: solid;
   border-width: 2px;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
