--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -5,7 +5,7 @@ div#form_replace.wbw_wide_form {
   margin-right: auto;
 }
 
-button,
+/* button,
 input,
 optgroup,
 select,
@@ -14,7 +14,7 @@ textarea {
 	font-size: 100%;
 	line-height: 1.15;
 	margin: 0;
-}
+} */
 
 input[type="number"]::-webkit-inner-spin-button, 
 input[type="number"]::-webkit-outer-spin-button {
@@ -27,7 +27,7 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  height: 2.1em;
+  height: 2.1rem;
 }
 
 .meeting-searcher-custom.meeting-searcher-custom.meeting-searcher-custom {
@@ -35,7 +35,7 @@ input[type="number"]::-webkit-outer-spin-button {
   font-size: 1.2em;
   padding: 5px 10px;
   display: block;
-  height: 2.1em;
+  height: 2.1rem;
 }
 
 .select2-results__options::-webkit-scrollbar {
@@ -126,7 +126,7 @@ body {
   border-top-style: solid;
   border-width: 1px;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.2em
+  font-size: 1.2rem
 }
 
 .form-grid select {
@@ -134,13 +134,13 @@ body {
   /* padding: 5px 10px; */
   display: block;
   width: 100%;
-  height: 2.1em;
+  height: 2.1rem;
   box-sizing: border-box;
   border-radius: 8px;
   border-top-style: solid;
   border-width: 2px;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.2em
+  font-size: 1.2rem
 }
 
 .form-grid .inline select {
@@ -157,7 +157,7 @@ body {
   cursor: pointer;
   box-sizing: border-box;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 .form-grid .inline label {
