--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -119,7 +119,7 @@ body {
   /* padding: 5px 10px; */
   display: block;
   width: 100%;
-  /* height: 2.1rem; */
+  height: 3rem;
   box-sizing: border-box;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -131,10 +131,12 @@ body {
 
 .form-grid select {
   line-height: 1.5;
-  /* padding: 5px 10px; */
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: .5rem;
   display: block;
   width: 100%;
-  height: 2.1rem;
+  height: 3rem;
   box-sizing: border-box;
   border-radius: 8px;
   border-top-style: solid;
