--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -116,7 +116,7 @@ body {
 .form-grid textarea
 {
   line-height: 1.5;
-  /* padding: 5px 10px; */
+  padding-left: .5rem;
   display: block;
   width: 100%;
   height: 3rem;
