--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -122,7 +122,7 @@ body {
 }
 
 .form-grid select,
-.update-form-select select {
+select.update-form-select {
   line-height: 1.5;
   padding-top: 0;
   padding-bottom: 0;
