--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -128,7 +128,6 @@ select.update-form-select {
   padding-bottom: 0;
   padding-left: .5rem;
   display: block;
-  width: 100%;
   height: 3rem;
   box-sizing: border-box;
   border-radius: 8px;
@@ -136,6 +135,11 @@ select.update-form-select {
   border-width: 2px;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 1.2rem
+}
+
+.form-grid select
+{
+  width: 100%;
 }
 
 .form-grid .inline select {
