--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -105,13 +105,14 @@ body {
 }
 
 .form-grid input,
-.form-grid textarea
+.form-grid textarea,
+.form-grid select,
+select.update-form-select
 {
   line-height: 1.5;
   padding-left: .5rem;
   display: block;
   width: 100%;
-  height: 3rem;
   box-sizing: border-box;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -121,20 +122,23 @@ body {
   font-size: 1.2rem
 }
 
+.form-grid input 
+{
+  height: 3rem;
+}
+
+.form-grid textarea
+{
+  height: 6rem;
+}
+
 .form-grid select,
 select.update-form-select {
-  line-height: 1.5;
   padding-top: 0;
   padding-bottom: 0;
-  padding-left: .5rem;
-  display: block;
   height: 3rem;
-  box-sizing: border-box;
   border-radius: 8px;
-  border-top-style: solid;
   border-width: 2px;
-  font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.2rem
 }
 
 .form-grid select
@@ -145,7 +149,6 @@ select.update-form-select {
 .form-grid .inline select {
   display: inline;
   width: auto;
-
 }
 
 .form-grid label {
