--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -5,17 +5,6 @@ div#form_replace.wbw_wide_form {
   margin-right: auto;
 }
 
-/* button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	font-size: 100%;
-	line-height: 1.15;
-	margin: 0;
-} */
-
 input[type="number"]::-webkit-inner-spin-button, 
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -77,6 +66,10 @@ body {
   grid-template-columns: repeat(2, [col] 1fr);
   grid-template-rows: repeat(5, [row] auto);
   box-sizing: border-box;
+}
+
+input#submit.button {
+  padding: 0;
 }
 
 .form-grid-top {
