--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -109,7 +109,7 @@ select.update-form-select,
 input#submit.button
 {
   line-height: 1.5;
-  padding-left: .5rem;
+  padding: .25rem .25rem .25rem .5rem;
   display: block;
   width: 100%;
   box-sizing: border-box;
