--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -107,9 +107,8 @@ input#submit.button
   display: block;
   width: 100%;
   box-sizing: border-box;
-  border-top-left-radius: 3px;
-  border-top-right-radius: 3px;
-  border-top-style: solid;
+  border-radius: 3px;
+  border-style: solid;
   border-width: 1px;
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 1.2rem
