--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -102,7 +102,6 @@ input#submit.button,
 {
   line-height: 1.5;
   padding-top: .25rem; 
-  /* padding-right: .25rem; */
   padding-bottom: .25rem;
   padding-left: .5rem;
   display: block;
@@ -433,23 +432,28 @@ hr.wbw-error-message
 
 
 /* select theme */
-/*********************************
-Author : Techhysahil
-Link : http://techhysahil.com
-*********************************/
-/****** Single SCSS *******/
-.select2-container--flat .select2-selection--single {
-	background: #48c9b0;
-	border: 0px;
-	height: 34px;
+.select2-container--wbw_select2_theme .select2-selection--single {
+  line-height: 1.5;
+  padding-top: .25rem; 
+  padding-bottom: .25rem;
+  padding-left: .5rem;
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 3px;
+  border-style: solid;
+  border-color: rgb(204,204,204);
+  border-width: 1px;
+  font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 1.2rem
 }
 
-.select2-container--flat .select2-selection--single .select2-selection__rendered {
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__rendered {
 	color: #fff;
 	line-height: 34px;
 }
 
-.select2-container--flat .select2-selection--single .select2-selection__arrow {
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__arrow {
 	height: 26px;
 	position: absolute;
 	top: 1px;
@@ -457,7 +461,7 @@ Link : http://techhysahil.com
 	width: 20px;
 }
 
-.select2-container--flat .select2-selection--single .select2-selection__arrow b {
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__arrow b {
 	border-color: #fff transparent transparent transparent;
 	top: 60%;
 	border-style: solid;
@@ -470,27 +474,27 @@ Link : http://techhysahil.com
 	width: 0;
 }
 
-.select2-container--flat .select2-selection--single .select2-selection__placeholder {
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__placeholder {
 	color: #fff;
 }
 
-.select2-container--flat .select2-selection--single .select2-selection__clear {
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__clear {
 	cursor: pointer;
 	float: right;
 	font-weight: bold;
 }
 
 /****** Multiple SCSS *******/
-.select2-container--flat .select2-selection--multiple {
+.select2-container--wbw_select2_theme .select2-selection--multiple {
 	border: 1px solid #16a085;
 }
 
-.select2-container--flat .select2-selection--multiple .select2-selection__choice__remove:hover {
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove:hover {
 	color: #16a085;
 	cursor: pointer;
 }
 
-.select2-container--flat .select2-selection--multiple .select2-selection__rendered {
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
 	box-sizing: border-box;
 	list-style: none;
 	margin: 0;
@@ -498,7 +502,7 @@ Link : http://techhysahil.com
 	width: 100%;
 }
 
-.select2-container--flat .select2-selection--multiple .select2-selection__choice {
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice {
 	background-color: #48c9b0;
 	color: #fff;
 	border: 1px solid #48c9b0;
@@ -510,7 +514,7 @@ Link : http://techhysahil.com
 	margin-top: 5px;
 }
 
-.select2-container--flat .select2-selection--multiple .select2-selection__choice__remove {
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove {
 	color: #16a085;
 	margin-right: 6px;
 	margin-left: 6px;
@@ -522,32 +526,32 @@ Link : http://techhysahil.com
 	background: #48c9b0;
 }
 
-.select2-container--flat .select2-container--focus .select2-selection--multiple {
+.select2-container--wbw_select2_theme .select2-container--focus .select2-selection--multiple {
 	border: 1px solid #16a085;
 }
 
-.select2-container--flat .select2-results__option--highlighted[aria-selected] {
+.select2-container--wbw_select2_theme .select2-results__option--highlighted[aria-selected] {
 	background: #16a085 !important;
 	color: #ffffff;
 }
 
-.select2-container--flat .select2-results__option[aria-selected=true] {
+.select2-container--wbw_select2_theme .select2-results__option[aria-selected=true] {
 	background: #16a085;
 	color: #fff;
 	opacity: 0.8;
 }
 
-.select2-container--flat .select2-selection--single {
+.select2-container--wbw_select2_theme .select2-selection--single {
 	border-radius: 0px;
 }
 
-.select2-container--flat.select2-container--open .select2-selection__arrow b {
+.select2-container--wbw_select2_theme.select2-container--open .select2-selection__arrow b {
 	transform: rotate(180deg);
 	-webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
 }
 
-.select2-container--flat span.select2-search input {
+.select2-container--wbw_select2_theme span.select2-search input {
 	height: 30px !important;
 }
 
