--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -432,7 +432,8 @@ hr.wbw-error-message
 
 
 /* select theme */
-.select2-container--wbw_select2_theme .select2-selection--single {
+.select2-container--wbw_select2_theme .select2-selection--single,
+.select2-container--wbw_select2_theme {
   line-height: 1.5;
   padding-top: .25rem; 
   padding-bottom: .25rem;
