--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -432,26 +432,28 @@ hr.wbw-error-message
 
 
 /* select theme */
-.select2-container--wbw_select2_theme .select2-selection--single,
-.select2-container--wbw_select2_theme {
-  line-height: 1.5;
-  padding-top: .25rem; 
-  padding-bottom: .25rem;
-  padding-left: .5rem;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  border-radius: 3px;
-  border-style: solid;
-  border-color: rgb(204,204,204);
-  border-width: 1px;
-  font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 1.2rem
+.select2-container--wbw_select2_theme .select2-selection--single {
+	background-color: #fff;
+	border: 1px solid #aaa;
+	border-radius: 4px;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--single .select2-selection__rendered {
-	color: #fff;
-	line-height: 34px;
+	color: #444;
+	line-height: 28px;
+}
+
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__clear {
+	cursor: pointer;
+	float: right;
+	font-weight: bold;
+	height: 26px;
+	margin-right: 20px;
+	padding-right: 0px;
+}
+
+.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__placeholder {
+	color: #999;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--single .select2-selection__arrow {
@@ -463,8 +465,7 @@ hr.wbw-error-message
 }
 
 .select2-container--wbw_select2_theme .select2-selection--single .select2-selection__arrow b {
-	border-color: #fff transparent transparent transparent;
-	top: 60%;
+	border-color: #888 transparent transparent transparent;
 	border-style: solid;
 	border-width: 5px 4px 0 4px;
 	height: 0;
@@ -472,213 +473,222 @@ hr.wbw-error-message
 	margin-left: -4px;
 	margin-top: -2px;
 	position: absolute;
+	top: 50%;
 	width: 0;
 }
 
-.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__placeholder {
-	color: #fff;
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--single .select2-selection__clear {
+	float: left;
 }
 
-.select2-container--wbw_select2_theme .select2-selection--single .select2-selection__clear {
-	cursor: pointer;
-	float: right;
-	font-weight: bold;
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--single .select2-selection__arrow {
+	left: 1px;
+	right: auto;
 }
 
-/****** Multiple SCSS *******/
+.select2-container--wbw_select2_theme.select2-container--disabled .select2-selection--single {
+	background-color: #eee;
+	cursor: default;
+}
+
+.select2-container--wbw_select2_theme.select2-container--disabled .select2-selection--single .select2-selection__clear {
+	display: none;
+}
+
+.select2-container--wbw_select2_theme.select2-container--open .select2-selection--single .select2-selection__arrow b {
+	border-color: transparent transparent #888 transparent;
+	border-width: 0 4px 5px 4px;
+}
+
 .select2-container--wbw_select2_theme .select2-selection--multiple {
-	border: 1px solid #16a085;
+	background-color: white;
+	border: 1px solid #aaa;
+	border-radius: 4px;
+	cursor: text;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	position: relative;
 }
 
-.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove:hover {
-	color: #16a085;
+.select2-container--wbw_select2_theme .select2-selection--multiple.select2-selection--clearable {
+	padding-right: 25px;
+}
+
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__clear {
 	cursor: pointer;
-}
-
-.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
-	box-sizing: border-box;
-	list-style: none;
-	margin: 0;
-	padding: 0 5px;
-	width: 100%;
+	font-weight: bold;
+	height: 20px;
+	margin-right: 10px;
+	margin-top: 5px;
+	position: absolute;
+	right: 0;
+	padding: 1px;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice {
-	background-color: #48c9b0;
-	color: #fff;
-	border: 1px solid #48c9b0;
-	border-radius: 0px;
-	padding: 3px 5px;
-	cursor: default;
-	float: left;
-	margin-right: 5px;
+	background-color: #e4e4e4;
+	border: 1px solid #aaa;
+	border-radius: 4px;
+	box-sizing: border-box;
+	display: inline-block;
+	margin-left: 5px;
 	margin-top: 5px;
+	padding: 0;
+	padding-left: 20px;
+	position: relative;
+	max-width: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	vertical-align: bottom;
+	white-space: nowrap;
+}
+
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__display {
+	cursor: default;
+	padding-left: 2px;
+	padding-right: 5px;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove {
-	color: #16a085;
-	margin-right: 6px;
-	margin-left: 6px;
-	float: right;
+	background-color: transparent;
+	border: none;
+	border-right: 1px solid #aaa;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	color: #999;
+	cursor: pointer;
+	font-size: 1em;
+	font-weight: bold;
+	padding: 0 4px;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 
-.select2-container--open .select2-dropdown--below,
-.select2-container--open .select2-dropdown--above {
-	background: #48c9b0;
-}
-
-.select2-container--wbw_select2_theme .select2-container--focus .select2-selection--multiple {
-	border: 1px solid #16a085;
-}
-
-.select2-container--wbw_select2_theme .select2-results__option--highlighted[aria-selected] {
-	background: #16a085 !important;
-	color: #ffffff;
-}
-
-.select2-container--wbw_select2_theme .select2-results__option[aria-selected=true] {
-	background: #16a085;
-	color: #fff;
-	opacity: 0.8;
-}
-
-.select2-container--wbw_select2_theme .select2-selection--single {
-	border-radius: 0px;
-}
-
-.select2-container--wbw_select2_theme.select2-container--open .select2-selection__arrow b {
-	transform: rotate(180deg);
-	-webkit-transform: rotate(180deg);
-	-moz-transform: rotate(180deg);
-}
-
-.select2-container--wbw_select2_theme span.select2-search input {
-	height: 30px !important;
-}
-
-.select2-container .select2-choice {
-	border: 2px solid #dce4ec;
-	height: 36px;
-	border-radius: 0px;
-	font-family: "Lato", sans-serif;
-	font-size: 14px;
-	text-indent: 1px;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	background-image: none;
-}
-
-.select2-container .select2-choice div {
-	border-left: 2px solid #dce4ec;
-	-webkit-border-radius: 0 4px 4px 0;
-	-moz-border-radius: 0 4px 4px 0;
-	border-radius: 0 4px 4px 0;
-	-webkit-background-clip: padding-box;
-	-moz-background-clip: padding;
-	background-clip: padding-box;
-}
-
-.select2-container .select2-choice .select2-arrow {
-	border: 0px;
-	border-radius: 0px;
-	background: transparent;
-	background-image: none;
-}
-
-.select2-container *:focus {
-	outline: 0px;
-}
-
-.select2-container.select2-drop-above .select2-choice {
-	border-bottom-color: #dce4ec;
-	border-radius: 0px;
-}
-
-.select2-drop {
-	margin-top: -2px;
-	border: 2px solid #dce4ec;
-	border-top: 0;
-	border-radius: 0px !important;
-	-webkit-border-radius: 0 0 6px 6px;
-	-moz-border-radius: 0 0 6px 6px;
-	border-radius: 0 0 6px 6px;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-}
-
-.select2-drop.select2-drop-above {
-	margin-top: 2px;
-	border-top: 2px solid #dce4ec;
-	border-bottom: 0;
-	-webkit-border-radius: 6px 6px 0 0;
-	-moz-border-radius: 6px 6px 0 0;
-	border-radius: 6px 6px 0 0;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-}
-
-.select2-search {
-	margin-top: 3px;
-}
-
-.select2-search input {
-	height: 26px;
-	border: 2px solid #dce4ec;
-}
-
-.select2-container-active .select2-choice,
-.select2-container-active .select2-choices {
-	border: 2px solid #dce4ec;
+.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove:hover, .select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__choice__remove:focus {
+	background-color: #f1f1f1;
+	color: #333;
 	outline: none;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
 }
 
-.select2-dropdown-open .select2-choice {
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
-	box-shadow: none;
-	-webkit-border-bottom-left-radius: 0;
-	-moz-border-radius-bottomleft: 0;
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--multiple .select2-selection__choice {
+	margin-left: 5px;
+	margin-right: auto;
+}
+
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--multiple .select2-selection__choice__display {
+	padding-left: 5px;
+	padding-right: 2px;
+}
+
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--multiple .select2-selection__choice__remove {
+	border-left: 1px solid #aaa;
+	border-right: none;
+	border-top-left-radius: 0;
 	border-bottom-left-radius: 0;
-	-webkit-border-bottom-right-radius: 0;
-	-moz-border-radius-bottomright: 0;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+.select2-container--wbw_select2_theme[dir="rtl"] .select2-selection--multiple .select2-selection__clear {
+	float: left;
+	margin-left: 10px;
+	margin-right: auto;
+}
+
+.select2-container--wbw_select2_theme.select2-container--focus .select2-selection--multiple {
+	border: solid black 1px;
+	outline: 0;
+}
+
+.select2-container--wbw_select2_theme.select2-container--disabled .select2-selection--multiple {
+	background-color: #eee;
+	cursor: default;
+}
+
+.select2-container--wbw_select2_theme.select2-container--disabled .select2-selection__choice__remove {
+	display: none;
+}
+
+.select2-container--wbw_select2_theme.select2-container--open.select2-container--above .select2-selection--single, .select2-container--wbw_select2_theme.select2-container--open.select2-container--above .select2-selection--multiple {
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.select2-container--wbw_select2_theme.select2-container--open.select2-container--below .select2-selection--single, .select2-container--wbw_select2_theme.select2-container--open.select2-container--below .select2-selection--multiple {
+	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 }
 
-.select2-dropdown-open .select2-choice .select2-choice div {
+.select2-container--wbw_select2_theme .select2-search--dropdown .select2-search__field {
+	border: 1px solid #aaa;
+}
+
+.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
 	background: transparent;
-	border-left: none;
-	filter: none;
-}
-
-.select2-results {
-	padding: 0 0 0 0px;
-	margin: 4px 0px 0px 0;
-}
-
-.select2-results .select2-highlighted {
-	background: #16a085;
-	color: #fff;
-	border-radius: 0px;
-}
-
-.select2-container-multi .select2-choices {
-	height: auto !important;
-	height: 1%;
-	border: 2px solid #dce4ec;
-}
-
-.select2-container-multi.select2-container-active .select2-choices {
-	border: 2px solid #dce4ec;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-	-webkit-box-shadow: none;
-	-moz-box-shadow: none;
+	border: none;
+	outline: 0;
 	box-shadow: none;
+	-webkit-appearance: textfield;
+}
+
+.select2-container--wbw_select2_theme .select2-results > .select2-results__options {
+	max-height: 200px;
+	overflow-y: auto;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option {
+	padding-left: 1em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__group {
+	padding-left: 0;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__option {
+	margin-left: -1em;
+	padding-left: 2em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__option .select2-results__option {
+	margin-left: -2em;
+	padding-left: 3em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option {
+	margin-left: -3em;
+	padding-left: 4em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option {
+	margin-left: -4em;
+	padding-left: 5em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option .select2-results__option {
+	margin-left: -5em;
+	padding-left: 6em;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option--group {
+	padding: 0;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option--disabled {
+	color: #999;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option--selected {
+	background-color: #ddd;
+}
+
+.select2-container--wbw_select2_theme .select2-results__option--highlighted.select2-results__option--selectable {
+	background-color: #5897fb;
+	color: white;
+}
+
+.select2-container--wbw_select2_theme .select2-results__group {
+	cursor: default;
+	display: block;
+	padding: 6px;
 }
