--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -432,6 +432,23 @@ hr.wbw-error-message
 
 
 /* select theme */
+.select2-container--wbw_select2_theme
+  {
+    line-height: 1.5;
+    padding-top: .25rem; 
+    padding-bottom: .25rem;
+    padding-left: .5rem;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 3px;
+    border-style: solid;
+    border-color: rgb(204,204,204);
+    border-width: 1px;
+    font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-size: 1.2rem
+  }
+
 .select2-container--wbw_select2_theme .select2-selection--single {
 	background-color: #fff;
 	border: 1px solid #aaa;
