--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -427,7 +427,7 @@ hr.wbw-error-message {
 
 
 /* select theme */
-.select2-container--wbw_select2_theme {
+span .select2-container--wbw_select2_theme {
   line-height: 1.5;
   display: block;
   box-sizing: border-box;
