--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -446,8 +446,9 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
 }
 
 .select2-container--wbw_select2_theme .select2-selection--single .select2-selection__rendered {
-  color: #444;
-  line-height: 28px;
+  padding-top: .25rem;
+  padding-bottom: .25rem;
+  padding-left: .5rem;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--single .select2-selection__clear {
