--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -515,6 +515,7 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple {
 span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
   padding-top: .6rem;
   margin-left: 0rem;
+  display: block;
 }
 
 .select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__placeholder {
@@ -637,7 +638,7 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-
 .select2-container--wbw_select2_theme .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
 }
-span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
+/* span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
   background: transparent;
   border: none;
   outline: 0;
@@ -645,7 +646,7 @@ span.select2-container--wbw_select2_theme .select2-search--inline .select2-searc
   height: auto;
   margin-top: 0.5em
   -webkit-appearance: textfield;
-}
+} */
 
 .select2-container--wbw_select2_theme .select2-results>.select2-results__options {
   max-height: 200px;
