--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -626,9 +626,10 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-
   border-bottom-right-radius: 0;
 }
 
-.select2-container--wbw_select2_theme .select2-search--dropdown .select2-search__field {
+/* .select2-container--wbw_select2_theme .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
-}
+} */
+
 /* span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
   background: transparent;
   border: none;
