--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -630,15 +630,15 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-
   border: 1px solid #aaa;
 } */
 
-/* span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
+span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
   background: transparent;
   border: none;
   outline: 0;
   box-shadow: none;
   height: auto;
-  margin-top: 0.5em
+  margin-top: 0.5em;
   -webkit-appearance: textfield;
-} */
+}
 
 /* .select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
   background: transparent;
