--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -429,7 +429,7 @@ span.select2-container--wbw_select2_theme {
   font-family: "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 1.2rem
 }
-
+/* 
 span.select2-container--wbw_select2_theme .select2-selection--single {
   background-color: #fff;
   border-radius: 8px;
@@ -504,12 +504,9 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple {
 }
 
 span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
-  /* padding-top: .6rem; */
   padding-top: 0rem;
   margin-bottom: 0;
-
   margin-left: 0rem;
-  /* display: block; */
 }
 
 .select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__placeholder {
@@ -629,28 +626,14 @@ span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-
   border-bottom-right-radius: 0;
 }
 
-/* .select2-container--wbw_select2_theme .select2-search--dropdown .select2-search__field {
-  border: 1px solid #aaa;
-} */
-
 span.select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
   background: transparent;
   border: none;
   outline: 0;
   box-shadow: none;
-  /* height: auto; */
   margin-top: 0.5em;
   -webkit-appearance: textfield;
 }
-
-/* .select2-container--wbw_select2_theme .select2-search--inline .select2-search__field {
-  background: transparent;
-  border: none;
-  outline: 0;
-  box-shadow: none;
-  -webkit-appearance: textfield;
-} */
-
 
 .select2-container--wbw_select2_theme .select2-results>.select2-results__options {
   max-height: 200px;
@@ -711,4 +694,4 @@ span.select2-container--wbw_select2_theme .select2-search--inline .select2-searc
   cursor: default;
   display: block;
   padding: 6px;
-}
+} */
