--- a/css/meeting_update_form.css
+++ b/css/meeting_update_form.css
@@ -496,13 +496,13 @@ span.select2-container--wbw_select2_theme .select2-selection--single {
   border-color: transparent transparent #888 transparent;
   border-width: 0 4px 5px 4px;
 }
-
+*/
 span.select2-container--wbw_select2_theme .select2-selection--multiple {
   background-color: #fff;
   border-radius: 8px;
   height: 3rem;
 }
-
+/*
 span.select2-container--wbw_select2_theme .select2-selection--multiple .select2-selection__rendered {
   padding-top: 0rem;
   margin-bottom: 0;
